# strategy

./: CMakeLists.txt  README.md  package.xml
launch/: camera.launch.py  j_motor.launch.py
scripts/: sub_image.py
src/: detect_yellow.cpp  serial_node.cpp  sub_image.cpp  test_image.cpp
strategy/: import_module.py
